# digiko

./: .gitignore  BUILD_FIX.md  CHANGELOG.md  DOCUMENTATION_IMPROVEMENTS.md  GITHUB_STRUCTURE_FIX.md  GIT_COMMIT_v1.1.0.md  HOME_SETUP.md  INTEGRATED_QUICK_START.md  README_COMPLETE.md  READY_TO_COMMIT.md  VERSION_CORRECTION.md  design_guide.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
.github/workflows/: telegram-notify.yml
contract/: Cargo.toml  DEPLOYMENT.md  INTEGRATION.md  README.md  SUMMARY.md  counter.rs  multicontract.toml
contract/src/: lib.rs  lib.rs.save
contract/wasm/: Cargo.toml
contract/wasm/src/: lib.rs
docs/: BITCOIN_ME_API_INTEGRATION.md  CHANGELOG.md  INTERNAL_DEV_DOCS.md  PROJECT_RULES.md  RESPONSIVE_INDEX.md  RESPONSIVE_MIGRATION.md  RESPONSIVE_REFERENCE.md  RESPONSIVE_TESTING.md  RESPONSIVE_VISUAL_GUIDE.md  SWAP_README.md  design_guide.md
docs/dev/: CONTRACT_DEVELOPMENT.md  DASHBOARD_UPDATE.md  DEBUG_MENU_SETUP.md  DEBUG_MODE_INTEGRATION.md  DEPLOYMENT_TROUBLESHOOTING.md  DEX_STATUS_SUMMARY.md  DOCUMENTATION_ARCHITECTURE.md  ERROR_LOGGING_EXAMPLES.md  ERROR_LOGGING_SUMMARY.md  ERROR_LOGGING_SYSTEM.md  FORCE_ERRORS_GUIDE.md  GIT_NUCLEAR_RESET.md  GIT_PATCH_WORKFLOW.md  INSTALLATION.md  LESSONS_2025_11_28.md  LESSONS_2025_11_29.md  MODULAR_ARCHITECTURE.md  PACKAGE_README.md  QUICK_SPLIT_GUIDE.md  README.md  RESPONSIVE_DESIGN_SYSTEM.md  SESSION_2025-11-26_Dashboard_Refresh.md  SESSION_2025-11-27_DEX_Frontend_Integration.md  SPLIT_GUIDE.md  TESTING_GUIDE.md  TOKEN_IMAGES.md  (+2 more)
(+146 files in other folders)
