[package]
name = "digiko-swap"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
klever-sc = { version = "0.45.0" }

[dev-dependencies]
klever-sc-scenario = { version = "0.45.0" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = false
